--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "chuck-norris-jokes",
   "version": "0.1.0",
+  "description": "Chuck Norris Jokes random machine",
+  "keywords": [],
+  "author": "Leandro Rodrigo",
+  "license": "ISC",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,8 +13,16 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "sass": "^1.32.6",
+    "sass-loader": "^9.0.3",
+    "sass-resources-loader": "^2.1.1",
+    "style-loader": "^1.2.1",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-loader": "^13.0.5",
+    "vue-router": "^4.0.0-0",
+    "vue-template-compiler": "^2.4.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
