--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "sass": "^1.32.6",
+    "sass-loader": "9.0.3",
     "sass-resources-loader": "^2.1.1",
     "style-loader": "^1.2.1",
     "stylus": "^0.54.8",
